[package]
name = "ic-captcha"
version = "0.1.0"
edition = "2021"
authors = ["Yan Qing <txr1883@gmail.com>"]
repository = "https://github.com/ldclabs/ic-captcha"
keywords = ["ic-captcha", "captcha"]
description = "Generating CAPTCHAs with given random bytes for the Internet Computer."
exclude = ["images/*"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
imageproc = "0.23"
rusttype = "0.9"
sha3 = "0.10"
